--- a/views/template/inscription/connexion.html.twig
+++ b/views/template/inscription/connexion.html.twig
@@ -6,6 +6,7 @@
 		                                                                                   <!--_id === -->
 			<form class="col-md-6 mx-auto mt-5" method="post" action="{% if action == "/updatePokemon" %}{{action}}/{{user._id}}{% else %}{{action}}{% endif %}">
 				<h1>Connexion</h1>
+				<h1>bonjour</h1>
 				<p class="text-danger">{{messageErreur}}</p>
 				<div>
 					<label for="name">pseudo</label>
