--- a/views/main.html.twig
+++ b/views/main.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
     <meta name="author" content="Samy CHABANI/ Ylies AZOUZ">
     <title>Weride</title>   
-   <link rel="icon" type="image/png" href="#" />
+   <link rel="icon" type="image/png" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
     <!-- pourquoi avoir mis le link boostrap dans un block-->   
     {% block stylesheets %} 
@@ -28,7 +28,7 @@
     {% endblock %}
 
      {% block script %}
-        <script src="#" ></script>
+        <script src="" ></script>
     {% endblock %}
 
 
