--- a/views/template/inscription/connexion.html.twig
+++ b/views/template/inscription/connexion.html.twig
@@ -4,9 +4,8 @@
 		<div class="row ">      
 
 		                                                                                   <!--_id === -->
-			<form class="col-md-6 mx-auto mt-5" method="post" action="{% if action == "/updatePokemon" %}{{action}}/{{user._id}}{% else %}{{action}}{% endif %}">
+			<form class="col-md-6 mx-auto mt-5" method="post" action="connexion">
 				<h1>Connexion</h1>
-				<h1>bonjour</h1>
 				<p class="text-danger">{{messageErreur}}</p>
 				<div>
 					<label for="name">pseudo</label>
