--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -1,2 +1,13 @@
-<header> 
-</header>
+<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <span class="fs-4">Simple header</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="/inscription" class="nav-link">inscription</a></li>
+        <li class="nav-item"><a href="/connexion" class="nav-link">connexion</a></li>
+        <li class="nav-item"><a href="/listEvent" class="nav-link">listes des évènements</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </ul>
+    </header>
