--- a/views/template/inscription/inscription.html.twig
+++ b/views/template/inscription/inscription.html.twig
@@ -4,6 +4,7 @@
 		<div class="row ">
 			<form class="col-md-6 mx-auto mt-5" method="post" action="inscription">
 				<h1>inscription</h1>
+				<h1>test de modification</h1>
 				{% for err in errors %}
 					<p class="text-danger">{{err}}</p>
 				{% endfor %}
