--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -1,4 +1,5 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
 <h1>Profil</h1>
+<a href="/deconnexion" class="p-1 btn btn-danger">deconexion</a>
 {% endblock %}
