--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -1,4 +1,15 @@
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+{% if !user %}
+    <header class="d-flex justify-content-between align-items-center border-bottom shadow">
+        <a href="/" class="col-1 p-3 d-flex  text-dark text-decoration-none">
+          <img class="col-7" src="./pictures/logo-weride.png" alt="logo_weride">
+        </a>
+        <ul class="nav nav-pills">
+          <li class="nav-item"><a href="/inscription" class="nav-link text-secondary">Inscription</a></li>
+          <li class="nav-item"><a href="/connexion" class="nav-link text-secondary">Connexion</a></li>
+        </ul>
+      </header>
+    {% else %}
+      <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
         <span class="fs-4">Simple header</span>
       </a>
@@ -11,3 +22,7 @@
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
     </header>
+    {% endif %}
+    
+
+    
