--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -1,5 +1,5 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-<h1>Profil</h1>
+<h1>Bienvenue {{user.name}}</h1>
 <a href="/deconnexion" class="p-1 btn btn-danger">deconexion</a>
 {% endblock %}
