--- a/views/template/home/home.html.twig
+++ b/views/template/home/home.html.twig
@@ -1,6 +1,6 @@
 {% extends "../../main.html.twig" %}
 {% block header %}
-        {% include "../layout/_header2.html.twig" %}
+        {% include "../layout/_header.html.twig" %}
     {% endblock %}
 {% block main %}
 <h1>hfhj</h1>
