--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -1,4 +1,8 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-
+	<div>
+		<h1>bienvenue {{user.name}}</h1>
+        <p>Nom : {{user.firstName}}</p>
+        <p>Pseudo : {{user.pseudo}}</p>
+	</div>
 {% endblock %}
