--- a/views/template/event/newEvent.html.twig
+++ b/views/template/event/newEvent.html.twig
@@ -13,6 +13,10 @@
 					<label for="startDate">Date de départ :</label>
 					<input type="date" class="form-control" id="startDate" name="startDate" placeholder="" value="">
 				</div>
+								<div>
+					<label for="hour">Heure de départ :</label>
+					<input type="time" class="form-control" id="hour" name="hour" placeholder="" value="">
+				</div>
 				<div>
 					<label for="endDAte">Date de retour :</label>
 					<input type="date" class="form-control" id="endDate" name="endDate" placeholder="" value="">
@@ -27,20 +31,20 @@
 				</div>
 				<div>
 					<label for="step">Etape :</label>
-					<input type="password" class="form-control" id="step" name="step" placeholder="" value="">
+					<input type="text" class="form-control" id="step" name="step" placeholder="" value="">
 				</div>
 				<div class="row mt-2 mb-2">
-					<div class="d-flex space-between">
-						<input type="radio" class="form-control" id="pepere" name="type" placeholder="" value="pepere">
-						<label for="type">pépére</label>
+					<div>
+						<input type="radio"  id="pepere" name="type"  value="pepere">
+						<label for="pepere">pépére</label>
 					</div>
-					<div class="d-flex">
-						<input type="radio" class="form-control" id="normal" name="type" placeholder="" value="normal">
-						<label for="type">normal</label>
+					<div>
+						<input type="radio"  id="normal" name="type"  value="normal">
+						<label for="normal">normal</label>
 					</div>
-					<div class="d-flex">
-						<input type="radio" class="form-control" id="gaz" name="type" placeholder="" value="gaz">
-						<label for="type">gazzZ</label>
+					<div>
+						<input type="radio"  id="gaz" name="type"  value="gaz">
+						<label for="gaz">gazzZ</label>
 					</div>
 				</div>
 				<div>
