--- a/views/template/authentification/login.html.twig
+++ b/views/template/authentification/login.html.twig
@@ -1,24 +1,24 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-	<div class="container">
-		<div class="row ">      
-
-		                                                                                   <!--_id === -->
-			<form class="col-md-6 mx-auto mt-5" method="post" action="connexion">
-				<h1>Connexion</h1>
+	<main class="row" style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
+		<h1 class="text-center my-5">Hey, ravis de te revoir!</h1>
+		<!--_id === -->
+		<form class="col-md-6 mx-auto my-5 bg-light rounded" method="post" action="connexion">
+			<h1 class="text-primary">Connexion</h1>
+			<hr class="m-0">
 			{% for err in errors %}
 				<p class="text-danger">{{err}}</p>
 			{% endfor %}
-				<div>
-					<label for="name">pseudo</label>
-					<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
-				</div>
-				<div>
-					<label for="password">mot de passe</label>
-					<input type="password" class="form-control" id="password" name="password" placeholder="mot de passe" value="{{user.password}}">
-				</div>
-				<button type="submit" class="btn btn-primary">Connexion</button>
-			</form>
-		</div>
-	</div>
+			<div>
+				<label class="my-3" for="name">Pseudo</label>
+				<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
+			</div>
+			<div>
+				<label class="my-3" for="password">Mot de passe</label>
+				<input type="password" class="form-control" id="password" name="password" placeholder="mot de passe" value="{{user.password}}">
+			</div>
+			<button type="submit" class="my-3 btn btn-primary">Connexion</button>
+		</form>
+
+	</main>
 {% endblock %}
