--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -1,35 +1,36 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-	<div class="container">
-		<div class="row ">
-			<form class="col-md-6 mx-auto mt-5" method="post" action="inscription">
-				<h1>inscription</h1>
+	<main class="row" style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
+		<h1 class="text-center my-5">Bienvenue dans le monde des motards!</h1>
+			<form class="col-md-6 mx-auto my-5 bg-light rounded" method="post" action="inscription">
+				<h1 class="text-primary">Inscription</h1>
+			<hr class="m-0">
 				{% for err in errors %}
 					<p class="text-danger">{{err}}</p>
 				{% endfor %}
 				
 				<div>
-					<label for="name">Prénom :</label>
+					<label class="my-3" for="name">Prénom</label>
 					<input type="text" class="form-control" id="name" name="name" placeholder="Entrer votre prénom" value="{{user.name}}">
 				</div>
 				<div>
-					<label for="firstName">Nom :</label>
+					<label class="my-3" for="firstName">Nom</label>
 					<input type="text" class="form-control" id="firstName" name="firstName" placeholder="Entrer votre nom" value="{{user.firstName}}">
 				</div>
 				<div>
-					<label for="firstName">Pseudo :</label>
+					<label class="my-3" for="firstName">Pseudo</label>
 					<input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Entrer votre pseudo" value="{{user.pseudo}}">
 				</div>
 				<div>
-					<label for="firstName">Email :</label>
+					<label class="my-3" for="firstName">Email</label>
 					<input type="mail" class="form-control" id="mail" name="mail" placeholder="Entrer votre email" value="{{user.mail}}">
 				</div>
 				<div>
-					<label for="firstName">mot de passe :</label>
+					<label class="my-3" for="firstName">Mot de passe</label>
 					<input type="password" class="form-control" id="password" name="password" placeholder="Entrer votre mot de passe" value="{{user.password}}">
 				</div>
-				<button type="submit" class="btn btn-primary">inscription</button>
+				<button type="submit" class="my-3 btn btn-primary">Inscription</button>
 			</form>
-		</div>
-	</div>
+		
+	</main>
 {% endblock %}
