--- a/views/template/authentification/registration.html.twig
+++ b/views/template/authentification/registration.html.twig
@@ -1,8 +1,8 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
-	<main class="row" style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
+	<main style="background: url('./pictures/bg.png');background-size: cover; background-repeat: no-repeat;">
 		<h1 class="text-center my-5">Bienvenue dans le monde des motards!</h1>
-			<form class="col-md-6 mx-auto my-5 bg-light rounded" method="post" action="inscription">
+			<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" method="post" action="inscription">
 				<h1 class="text-primary">Inscription</h1>
 			<hr class="m-0">
 				{% for err in errors %}
