--- a/views/template/home/home.html.twig
+++ b/views/template/home/home.html.twig
@@ -12,11 +12,11 @@
     <div class="row col-8 mx-auto text-center ">
       <div class="col-4 bg-light p-0 mx-auto my-3 text-success rounded">
         <img class="col-12 rounded" src="./pictures/map.jpg" alt="image_map">
-        <h2 class="p-4 m-0">Organise ta balade en plannifiant ton itinéraire</h2>
+        <h2 class="p-4 m-0">Organises ta balade en plannifiant ton itinéraire</h2>
       </div>
       <div class="col-4 bg-light p-0 mx-auto my-3 text-success rounded">
         <img class="col-12 rounded" src="./pictures/gestion.png" alt="image_map">
-        <h2 class="p-4 m-0">Maitrise ton budget pour chacune de tes sorties</h2>
+        <h2 class="p-4 m-0">Maitrises ton budget pour chacune de tes sorties</h2>
       </div>
     </div>
     <div class="row col-8 mx-auto text-center ">
