--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -19,8 +19,8 @@
 					<p class="card-text">arriver :{{event.backLocation}} le {{event.endDate}}</p>
 					<p class="card-text">étape :{{event.step}}</p>
 					<p class="card-text">type : {{event.step}}</p>
-					<a href="" class="btn btn-primary">Modifier</a>
-					<a href="" class="btn btn-danger">Supprimer</a>
+					<a href="/modifierEvenement/{{event._id}}" class="btn btn-primary">Modifier</a>
+					<a href="/supprimerEvenement/{{event._id}}" class="btn btn-danger">Supprimer</a>
 				</div>
 			</div>
 		{% endfor %}
