--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -16,8 +16,8 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/profil/{{user._id}}" class="nav-link active" aria-current="page">Profil</a></li>
-        <li class="nav-item"><a href="/modifierProfil/{{user._id}}" class="nav-link " aria-current="page">modifier le Profil</a></li>
+        <li class="nav-item"><a href="/profil" class="nav-link active" aria-current="page">Profil</a></li>
+        <li class="nav-item"><a href="/modifierProfil" class="nav-link " aria-current="page">modifier le Profil</a></li>
         <li class="nav-item"><a href="/nouvelleEvenement/{{user._id}}" class="nav-link " aria-current="page">Organiser une sortie</a></li>
         <li class="nav-item"><a href="/deconnexion" class="nav-link">deconnexion</a></li>
       </ul>
