--- a/views/template/event/newEvent.html.twig
+++ b/views/template/event/newEvent.html.twig
@@ -3,7 +3,7 @@
 
 	<div class="container">
 		<div class="row ">
-			<form class="col-md-6 mx-auto mt-5" method="post" action="newEvent">
+			<form class="col-md-6 mx-auto mt-5" method="post" action="nouvelleEvenement">
 				<h1>créer un évenement</h1>
 				{% for err in errors %}
 					<p class="text-danger">{{err}}</p>
