--- a/views/template/layout/_header.html.twig
+++ b/views/template/layout/_header.html.twig
@@ -18,8 +18,8 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="/profil" class="nav-link active" aria-current="page">Profil</a></li>
         <li class="nav-item"><a href="/modifierProfil" class="nav-link " aria-current="page">modifier le Profil</a></li>
-        <li class="nav-item"><a href="/nouvelleEvenement/{{user._id}}" class="nav-link " aria-current="page">Organiser une sortie</a></li>
-        <li class="nav-item"><a href="/nouvelleEvenement/{{user._id}}" class="nav-link " aria-current="page">liste des sorties</a></li>
+        <li class="nav-item"><a href="/nouvelleEvenement" class="nav-link " aria-current="page">Organiser une sortie</a></li>
+        <li class="nav-item"><a href="/listeEvenement" class="nav-link " aria-current="page">liste des sorties</a></li>
         <li class="nav-item"><a href="/deconnexion" class="nav-link">deconnexion</a></li>
       </ul>
     </header>
