--- a/views/template/event/updateEvent.html.twig
+++ b/views/template/event/updateEvent.html.twig
@@ -2,7 +2,7 @@
 {% block main %}
 <div class="container">
 		<div class="row ">
-			<form class="col-md-6 mx-auto mt-5" method="post" action="newEvent">
+			<form class="col-md-6 mx-auto mt-5" method="post" action="/modifierEvenement/{{event._id}}">
 				<h1>Modifier un évenement</h1>
 				{% for err in errors %}
 					<p class="text-danger">{{err}}</p>
