--- a/views/template/event/updateEvent.html.twig
+++ b/views/template/event/updateEvent.html.twig
@@ -1,5 +1,6 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
+<main>
 <div class="container">
 		<div class="row ">
 			<form class="col-md-6 mx-auto mt-5" method="post" action="/modifierEvenement/{{event._id}}">
@@ -54,5 +55,5 @@
 			</form>
 		</div>
 	</div>
-
+</main>
 {% endblock %}
