--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -1,5 +1,7 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
+<main>
+
 	<section>
 		<h2>Mes sorties</h2>
 		{% for event in user.eventUser %}
@@ -17,5 +19,5 @@
 			</div>
 		{% endfor %}
 	</section>
-    
+</main>
 {% endblock %}
