--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -2,7 +2,7 @@
 {% block main %}
 	<main class="">
 		{# section moto #}
-		<section class="card col-6 mt-3 container p-0">
+		<section class="card col-6 mt-3 bg-light container p-0">
 			        <h2 class="card-title m-0 p-1">moto <span class="text-danger">(en construction)<span></h2>
 					<hr>
 					<article class="row card-body border border-muted rounded m-2">
@@ -12,7 +12,7 @@
 		</section>
 
 				{# section contact #}
-				<section class="card col-6 mt-3 container p-0">
+				<section class="card col-6 mt-3 bg-light container p-0">
 					        <h2 class="card-title m-0 p-1">Contact <span class="text-danger">(en construction)<span></h2>
 							<hr>
 							<article class="row card-body border border-muted rounded m-2">
@@ -23,7 +23,7 @@
 				</section>
 
 						{# section mes sortie #}
-						<section class="card col-6 mt-3 container p-0">
+						<section class="card col-6 mt-3 bg-light container p-0">
 							<h2 class="card-title m-0 p-1">Mes sorties</h2>
 							<hr>
 							{% for event in user.eventUser %}
@@ -52,7 +52,7 @@
 						</section>
 
 						{# section je participe #}
-						<section class="card col-6 mt-3 container p-0">
+						<section class="card col-6 mt-3 bg-light container p-0">
 							        <h2 class="card-title m-0 p-1">Je participe <span class="text-danger">(en construction)<span></h2>
 									<hr>
 									<article class="row card-body border border-muted rounded m-2">
@@ -62,7 +62,7 @@
 					    </section>
 
 								{# Page photos #}
-								<section class="card col-6 mt-3 mb-3 container p-0">
+								<section class="card col-6 mt-3 bg-light mb-3 container p-0">
 									             <h2 class="card-title m-0 p-1">Mes photos <span class="text-danger">(en construction)<span></h2>
 											<hr>
 											<article class="row ">
