--- a/views/template/user/updateProfil.html.twig
+++ b/views/template/user/updateProfil.html.twig
@@ -1,15 +1,20 @@
 {% extends "../../main.html.twig" %}
 {% block main %}
 	<main>
+
+
 		<div class="container">
 			<div class="row ">
-				<form class="col-md-6 mx-auto mt-5" method="post" action="modifierProfil">
-					<h1>Modifier le Profil</h1>
+
+				<form class="col-md-6 mx-auto p-3 my-5 bg-light rounded" method="post" action="modifierProfil">
+					<h1 class="text-primary">Modifier le Profil</h1>
+					<hr class="m-0">
 					{% for err in errors %}
 						<p class="text-danger">{{err}}</p>
 					{% endfor %}
+
 					<div>
-						<label for="name">Prénom :</label>
+						<label class="my-3" for="name">Prénom :</label>
 						<input type="text" class="form-control" id="name" name="name" placeholder="Entrer votre prénom" value="{{user.name}}">
 					</div>
 					<div>
@@ -30,6 +35,7 @@
 					</div>
 					<button type="submit" class="btn btn-primary">modifier</button>
 				</form>
+
 			</div>
 		</div>
 	</main>
