--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -3,7 +3,12 @@
 	<main class="">
 		{# section moto #}
 		<section class="card col-6 mt-3 container p-0">
-			        <h2 class="card-title m-0 p-1">moto <span class="text-danger">(en construction)<span></h2>
+					<div class="d-flex justify-content-between">
+			        	<h2 class="card-title m-0 p-1">moto <span class="text-danger">(en construction)<span></h2>
+						<button type="button" class="mt-1 mb-1 p-0   btn btn-light">
+							<a href="/modifierProfil" class="nav-link p-0" aria-current="page">Ajouter une moto</a>
+						</button>
+					</div>
 					<hr>
 					<article class="row card-body border border-muted rounded m-2">
 						<h6 class="card-title">Kawasaki</h5>
