--- a/views/template/moto/newMoto.html.twig
+++ b/views/template/moto/newMoto.html.twig
@@ -24,7 +24,7 @@
 						<label for="cylinder">Cylindrée</label>
 						<input type="number" class="form-control" id="cylinder" min="50" name="cylinder" placeholder="" value="">
 					</div>
-					<button type="submit" class="btn btn-primary">valider</button>
+					<button type="submit" class="btn btn-primary mt-2">valider</button>
 				</form>
 			</div>
 		</div>
