--- a/views/template/user/profil.html.twig
+++ b/views/template/user/profil.html.twig
@@ -48,7 +48,7 @@
 										<p class="card-subtitle mb-2 text-muted">Kawazaki Versys 650</p>
 									</div>
 								</div>
-								<h5 class="card-text">{{event.description}}</h5>
+								<h5 class="card-text">{{event.title}}</h5>
 								<p class="text-success m-0">nombre de rider 7+</p>
 							</div>
 							<div class="col-6">
